# simple-tetris-c

./: .clang-format  CMakeLists.txt  README.md  game.c  game.h  main.c
